[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "blog-pipeline"
version = "0.1.0"
description = "Agentic Topic Research to Publish pipeline for Shopify blogs"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Erfan Salehi" }]
dependencies = [
    "langgraph>=0.2.50",
    "langchain>=0.3.7",
    "langchain-openai>=0.2.8",
    "langchain-core>=0.3.15",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "sqlalchemy>=2.0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "httpx>=0.27",
    "textstat>=0.7.4",
    "fastembed>=0.3.6",
    "fal-client>=0.5.0",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
    "respx>=0.21",
]

[project.scripts]
blog-pipeline = "blog_pipeline.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
