[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "blog-pipeline"
version = "0.1.0"
description = "Agentic Topic Research to Linear pipeline for blog content"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Erfan Salehi" }]
dependencies = [
    "langgraph>=0.2.50",
    "langchain>=0.3.7",
    "langchain-openai>=0.2.8",
    "langchain-core>=0.3.15",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "sqlalchemy>=2.0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "httpx>=0.27",
    "textstat>=0.7.4",
    "fastembed>=0.3.6",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
    "respx>=0.21",
    # test_workflow_env.py parses .github/workflows to keep them in sync with
    # Settings. Present transitively via langchain; pinned here so the guard
    # doesn't silently depend on someone else's dependency.
    "pyyaml>=6.0",
]
# WhatsApp trigger webhook (blog-pipeline serve).
whatsapp = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
# Postgres driver for production deployment (DATABASE_URL=postgresql://...).
# Not needed for the local SQLite default.
postgres = [
    "psycopg[binary]>=3.1",
]

[project.scripts]
blog-pipeline = "blog_pipeline.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
